# atlas-cli-ng

./: README.md
crates/atlas-cli/: Cargo.toml
crates/atlas-cli-core/: Cargo.toml  README.md
crates/atlas-cli-core/examples/: profile.rs
crates/atlas-cli-core/src/: lib.rs  paths.rs  profile.rs
crates/atlas-cli-core/src/profile/: mod.rs  profile.rs
crates/atlas-cli/src/: main.rs
crates/atlas-cli/src/cli/: auth.rs  mod.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: lib.rs
crates/atlas-derive/: Cargo.toml
crates/atlas-derive-core/: Cargo.toml
crates/atlas-derive-core/src/: lib.rs
crates/atlas-derive/src/: error.rs  lib.rs  try_from_map.rs  url.rs
crates/atlas-derive/tests/: try_from_map.rs  url_tests.rs
