[package]
name = "atlas-cli-core"
description = "Core library to interact with the MongoDB Atlas CLI"
license = "MIT"
authors = ["Jeroen Vervaeke <crates.contact.6yqd3@8alias.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }

[[bin]]
name = "example-profile"
path = "examples/profile.rs"
