[package]
name = "atlas-cli-core"
description = "Core library to interact with the MongoDB Atlas CLI"
license = "MIT"
authors = ["Jeroen Vervaeke <crates.contact.6yqd3@8alias.com>"]
version = "0.2.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
serde = "1.0.210"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }

[[bin]]
name = "example-profile"
path = "examples/profile.rs"
